BenjaminHuang LoginValidator bug fix